<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->


    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_users"
        android:title="@string/action_users"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_mute"
        android:title="@string/action_mute"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>

