<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="mrc.appdichat.SignupActivity">

            <android.support.v7.widget.Toolbar
                android:id="@+id/signup_app_bar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/AppBarTheme1"></android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/signup_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="24dp"
                android:text="@string/register"
                android:textColor="#000"
                android:textSize="24sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress">

                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_pass_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_cpass_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_register_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:background="#f00"
                android:text="@string/create_an_account"
                android:textColor="#fff"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>
