<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="mrc.appdichat.SettingsActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_image_view"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:src="@drawable/defaultprofile"></de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/settings_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_image_view"
            android:layout_centerHorizontal="true"
            android:text="@string/display_name"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/settings_status_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_name_input"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/display_status"
            android:textColor="#fff"
            android:textSize="18sp"></TextView>

        <Button
            android:id="@+id/settings_changeimagebutton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/settings_status_input"

            android:layout_marginTop="150dp"

            android:background="#f00"
            android:text="@string/change_image"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/settings_changestatusbutton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_below="@id/settings_changeimagebutton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="#fff"
            android:text="@string/changestatus"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

    </RelativeLayout>

</ScrollView>
